syntax = "proto3";

package confidence.iam.v1.events;

import "confidence/events/v1/annotations.proto";
import "confidence/iam/v1/iam.proto";

option java_package = "com.spotify.confidence.iam.v1.events";
option java_multiple_files = true;
option java_outer_classname = "EventsProto";

// A client was created.
message ClientCreated {
  option (confidence.events.v1.event) = {
    persist: true;
    description: "Occurs when a client is created";
  };
  // The created client.
  Client client = 1;
}

// A client was deleted.
message ClientDeleted {
  option (confidence.events.v1.event) = {
    persist: true;
    description: "Occurs when a client is deleted";
  };
  // The deleted client.
  string client = 1;
}

// A client credential was created.
message ClientCredentialCreated {
  option (confidence.events.v1.event) = {
    persist: true;
    description: "Occurs when a new client credential is created";
  };
  // The created client credential.
  ClientCredential client_credential = 1;
}

// A client credential was deleted.
message ClientCredentialDeleted {
  option (confidence.events.v1.event) = {
    persist: true;
    description: "Occurs when a client credential is deleted";
  };
  // The deleted client credential.
  string client_credential = 1;
}
